--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
         "vue": "^2.1.10",
-        "vue-router": "^2.3.0"
+        "vue-router": "^2.3.0",
+        "vuedraggable": "^2.16.0"
     },
     "dependencies": {
         "vue-loader": "^14",
