--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,9 @@
+AuthUserFile location-timer.herokuapp.com/.htpasswd
+AuthGroupFile /dev/null
+AuthName "Please enter your ID and password"
+AuthType Basic
+require valid-user
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
