--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
-AuthUserFile location-timer.herokuapp.com/.htpasswd
+AuthUserFile /app/.htpasswd
 AuthGroupFile /dev/null
 AuthName "Please enter your ID and password"
 AuthType Basic
