Laravel basic認証と管理画面の非表示

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "olssonm/l5-very-basic-auth": "5.*"
     },
     "require-dev" : {
         "filp/whoops" : "~2.0",
