--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^7.4",
         "laravel/tinker": "~1.0",
         "olssonm/l5-very-basic-auth": "5.*"
     },
